拆分webpack dev production配置

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -1,4 +1,5 @@
 .hello 
     font-weight: 700
-    background: url('../images/icon.jpg')
+    min-height: 120px
+    background: url('../images/icon.jpg') no-repeat
     color red
